# ColorSmith

./: .gitignore  CMakeLists.txt  FLATPAK_README.md  LICENSE  Makefile  README.md  build.sh  com.ktechpit.colorsmith.yml  flatpak-build.sh
.github/: QUICKSTART.md  RELEASE.md
.github/workflows/: release.yml  windows-build.yml
docs/: INSTALL.md  MIGRATION.md  PROJECT_STRUCTURE.md
include/: AboutDialog.h  BrightnessSliderWidget.h  ColorExtractor.h  ColorLogic.h  ColorPreviewWidget.h  ContrastChecker.h  GradientMaker.h  HSLGradientSlider.h  MainWindow.h  Palette.h  PaletteManager.h  PaletteWidget.h  ScreenPicker.h  Settings.h  ShortcutsDialog.h  qthsvrectpicker.h  version.h
resources/: com.ktechpit.colorsmith.appdata.xml  com.ktechpit.colorsmith.desktop  resources.qrc  standard-html-colors.json
snap/: snapcraft.yaml
src/: AboutDialog.cpp  BrightnessSliderWidget.cpp  ColorExtractor.cpp  ColorLogic.cpp  ColorPreviewWidget.cpp  ContrastChecker.cpp  GradientMaker.cpp  HSLGradientSlider.cpp  MainWindow.cpp  Palette.cpp  PaletteManager.cpp  PaletteWidget.cpp  ScreenPicker.cpp  Settings.cpp  ShortcutsDialog.cpp  main.cpp  qthsvrectpicker.cpp
ui/: AboutDialog.ui  MainWindow.ui
